test/spec/loop.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/loop.wast
(;; STDOUT ;;;
out/test/spec/loop.wast:386: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/loop.wast:390: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/loop.wast:394: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/loop.wast:398: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001c: error: EndFunctionBody callback failed
out/test/spec/loop.wast:403: assert_invalid passed:
  error: type mismatch in loop, expected [] but got [i32]
  000001c: error: OnEndExpr callback failed
out/test/spec/loop.wast:409: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001b: error: OnEndExpr callback failed
out/test/spec/loop.wast:415: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001c: error: OnEndExpr callback failed
out/test/spec/loop.wast:421: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got [f32]
  0000020: error: OnEndExpr callback failed
out/test/spec/loop.wast:427: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000020: error: EndFunctionBody callback failed
out/test/spec/loop.wast:434: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001e: error: OnEndExpr callback failed
out/test/spec/loop.wast:443: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  000001e: error: OnEndExpr callback failed
out/test/spec/loop.wast:452: assert_invalid passed:
  error: type mismatch in loop, expected [i32] but got []
  0000020: error: OnEndExpr callback failed
out/test/spec/loop.wast:463: assert_malformed passed:
  out/test/spec/loop/loop.13.wat:1:16: error: unexpected label "$l"
  (func loop end $l)
                 ^^
out/test/spec/loop.wast:467: assert_malformed passed:
  out/test/spec/loop/loop.14.wat:1:19: error: mismatching label "$a" != "$l"
  (func loop $a end $l)
                    ^^
80/80 tests passed.
;;; STDOUT ;;)
